# udisks-qt

./: .gitignore  CMakeLists.txt  README
src/: udisks-qt5.pc.in
tests/: CMakeLists.txt  test-udisksclient-gui.cpp  test-udisksclient-gui.h  test-udisksclient.cpp  test-udisksclient.h
